--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,7 @@
-{margin: 0;padding: 0;}
+{
+    margin: 0;
+    padding: 0;
+}
 header, footer {width: 100%; height: 120px; background-color: rgb(193, 111, 219); color: white;}
 h1, h2 {text-align: center;}
 img {display: block; height: 50px; width: 50px; margin-left: auto; margin-right: auto;}
